--- a/04 Creating a Book Library with HTML5, JavaScript and Kinvey - LIVE Demo/styles/books.css
+++ b/04 Creating a Book Library with HTML5, JavaScript and Kinvey - LIVE Demo/styles/books.css
@@ -45,6 +45,16 @@ table td {
     padding: 5px 10px;
     border-radius: 3px;
 }
+.divComments {
+    background: ivory;
+    border-radius: 25px;
+    /*margin: 0 10px 10px 10px;*/
+    padding: 10px 20px;
+}
+.divCommentAuthor {
+    font-style: italic;
+    margin-left: 50px;
+}
 footer  {
     background: #DDD;
     padding: 5px 10px;
